# watcher

./: .clang-format  .directory  .gitignore  CMakeLists.txt  codecounter  create_version  format  watcher.pro
doc/: faq  how_to_build
doc/libyotsuba/: address  board_list  response_list  response_optional_attributes  response_required_attributes  topic_list
doc/loader/: IIDs
doc/theme_developing/: gen  main.tex
doc/theme_developing/img/: RootWindow_structure.dia
source/: CMakeLists.txt  source.pro
source/implementation/: CMakeLists.txt  implementation.pro  main.cxx  plugin_loader.cxx  plugin_loader.h  setting_default.cxx  setting_default.h  setting_loader.cxx  setting_loader.h
source/implementation/lib/: CMakeLists.txt  lib.pro
source/implementation/lib/loader/: CMakeLists.txt  FindWatcherLoader.cmake  board.h  category.h  content_base.cxx  content_base.h  loader.pro  response.cxx  response.h  root.cxx  root.h  topic.h
source/implementation/lib/logging/: CMakeLists.txt  FindWatcherLogging.cmake  logging.cxx  logging.h  logging.pro
source/implementation/lib/manager/: CMakeLists.txt  FindWatcherManager.cmake  imageconverter.cxx  imageconverter.h  imagemanager.cxx  imagemanager.h  manager.pro  pixelmanager.cxx  pixelmanager.h
source/implementation/lib/property_storage/: CMakeLists.txt  FindWatcherPropertyStorage.cmake  FindWatcherPropertyStorage.cmakee  operators.cxx  property_storage.cxx  property_storage.h  property_storage.pro
source/implementation/lib/test_plugin/: CMakeLists.txt  board.cxx  board.h  category.cxx  category.h  images.qrc  response.cxx  response.h  root.cxx  root.h  root.json  test_plugin.pro  topic.cxx  topic.h
source/implementation/lib/test_plugin/images/: note
source/implementation/lib/yotsuba/: CMakeLists.txt  api_urls.cxx  api_urls.h  attribute.cxx  attribute.h  board.cxx  board.h  category.cxx  category.h  enum_convert.cxx  enum_convert.h  error.cxx  error.h  response.cxx  response.h  root.cxx  root.h  topic.cxx  topic.h  trace.cxx  trace.h  yotsuba.pro
source/ui/: CMakeLists.txt  boardtabcontents.cxx  boardtabcontents.h  boardwindow.h  configwindow.h  configwindow.ui  filechooser.cxx  filechooser.h  imagemanager.cxx  imagemanager.h  license.cxx  license.h  multiple_scroll_area.cxx  multiple_scroll_area.h  pluginpanel.cxx  pluginpanel.h  pluginpanel.ui  qml_window_base.cxx  qml_window_base.h  resource.qrc  responsepanel.h  responsetabcontents.h  responseview.h  responsewindow.h  roottabcontents.cxx  roottabcontents.h  rootwindow.h  tabbase.cxx  tabbase.h  tabcontents_base.cxx  tabcontents_base.h  tabwindow_base.cxx  tabwindow_base.h  theme_scroll_area.cxx  theme_scroll_area.h  themepanel.cxx  themepanel.h  themepanel.ui  topicview.cxx  topicview.h  (+3 more)
source/ui/boardwindow/: boardtabcontents.cxx  constructor.cxx  properties.cxx  signals_slots.cxx
source/ui/configwindow/: constructor.cxx  events.cxx  functions.cxx  listing.cxx  properties.cxx  signals_slots.cxx  ui_creation.cxx
source/ui/default/: .directory  BoardTabContent.qml  BoardWindow.qml  Button.qml  ButtonListView.qml  ImageFlicker.qml  LinkImage.qml  LocationBar.qml  MenuList.qml  ResponseList.qml  ResponsePanel.qml  ResponseTabContent.qml  ResponseView.qml  ResponseWindow.qml  RootTabContent.qml  RootWindow.qml  ScrollBar.qml  Spacer.qml  Tab.qml  TopicView.qml  VersionWindow.qml
source/ui/default/icons/: note
source/ui/failsafe/: BoardWindow.qml  Button.qml  ResponseWindow.qml  RootWindow.qml  ScrollBar.qml  ToolTip.qml  VersionWindow.qml
source/ui/resource/: note
source/ui/resource/config_icons/: .directory
source/ui/responsewindow/: constructor.cxx  responsepanel.cxx  responsetabcontents.cxx  responseview.cxx  signals_slots.cxx
source/ui/rootwindow/: constructor.cxx  functions.cxx  properties.cxx  roottabcontents.cxx  signals_slots.cxx
source/ui/themes/default/: BoardTabContent.qml  BoardWindow.qml  ImageFlicker.qml  ResponseList.qml  ResponsePanel.qml  ResponseTabContent.qml  ResponseView.qml  ResponseWindow.qml  Tab.qml  info.json
